# praktikum_11_1_FH_Aachen_OperatorPointer_TEST

./: CMakeLists.txt  MyRectangle.h  main.cpp
